# notebookbuy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ai_service.py  app_config.py  apply_fix.py  benchmarks.py  components_db.json  currency.py  db.py  estimation.py  lappars.py  laptop_analyzer_v3.py  laptop_dashboard.py  laptop_finder.spec  launcher.py  notebookbuy-fix.diff  parser.py  passmark_cpu.json  passmark_gpu.json  pyproject.toml  query_999.graphql  retry_utils.py  run_pipeline.bat  scoring.py  send_telegram.py
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  daily_scrape.yml
scripts/: publish_to_github.ps1
tests/: test_benchmarks.py  test_currency.py  test_db.py  test_estimation.py  test_lappars.py  test_parser.py  test_scoring.py  test_send_telegram.py
