[project]
name = "notebookbuy"
version = "1.0.0"
description = "Find the best laptop deals on 999.md — scrape, benchmark, score, and visualize."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Pavel" }]
keywords = ["laptop", "deals", "999.md", "scraper", "analytics", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]

dependencies = [
    "beautifulsoup4>=4.12,<5",
    "google-genai>=1.0,<2",
    "pandas>=2.0,<3",
    "plotly>=5.18,<6",
    "python-dotenv>=1.0,<2",
    "rapidfuzz>=3.0,<4",
    "requests>=2.31,<3",
    "streamlit>=1.32,<2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0,<7",
    "pytest>=8.0,<10",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/pravel-no/notebookbuy"
Repository = "https://github.com/pravel-no/notebookbuy"
Issues = "https://github.com/pravel-no/notebookbuy/issues"

[tool.ruff]
target-version = "py310"
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
